--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ android:
     components:
         - build-tools-23.0.1
         - android-23
+jdk:
+  - oraclejdk8
 before_install:
   - nvm install v4
   - npm i -g npm@^2.0.0
